shared/slides.css
/* ... */
.larger-120 { font-size: 120%; }
.larger-150 { font-size: 150%; }

/* Common layout independent of slide mode */
html {font: 400 1em/1.3 ROSans, "Fira Sans", Verdana,
    sans-serif;
  font-variant-ligatures: no-common-ligatures;
  color-scheme: only light dark; /* only = disable Chromium's heuristics. */
  background: none; /* Make sure the background of body gets used */
  font-size-adjust: 0.506 /* Lato Regular */; letter-spacing: 0.02em}
body {background: url(linen.png) #595b60; counter-reset: slide;
  margin: 0.5em 2em 9em; color: white}
b {font-weight: bold}
dt {font-weight: bold}
dd {margin: 0}
h4 {font-size: 1.2em; margin: 0.5em 0}
.slide p, .slide ul, .slide ol, .slide pre, .slide blockquote, .slide li {
  margin: 0 0 0.6em 0}
.slide h1, .slide h2, .slide address {margin: 0 0 0.5em 0;
  font: 700 2em/1.1 ROSans, "Fira Sans", Verdana, sans-serif; font-size-adjust: 0.542; color: var(--main);}
.slide address { color: #000; font-weight: normal; font-size: 1em}
.slide address :link, .slide address :visited {color: inherit}
.slide h3 {font-size: 1.1em; color: var(--lux-color-violet-700);
  margin: 0.8em 0 0.48em 0}
.full, .comment {width: 40.889em; /*= w */ height: 23em; /*= N */}
.slide {width: 40.889em; /*= w */ min-height: 23em; /*= N */
  color: black; box-shadow: 0 2px 3px #000;
  line-height: 1.6;
  word-break: normal; overflow-wrap: normal; letter-spacing: normal;
  padding: 2em 5em /*= L + 1 */ 1em 2em;
  position: relative; scroll-behavior: smooth; overflow: auto;
  box-sizing: border-box; z-index: 0; display: inline-block;
  margin: 4em 2em 0 0; vertical-align: bottom; counter-increment: slide;
  background: right / 4em /*= L */ auto no-repeat hsl(0,0%,98%)}
.has-darkmode .slide,
.darkmode .slide { background-color: var(--dark-mode-background); }
.slide.textfit, .textfit .slide {height: 23em /*= L */}
.clear .slide:not(.cover), .slide:not(.cover).clear {background-image: none}
.slide:target {outline: lime solid 0.5em; outline-offset: 1em}
.slide:not(.cover, .final) { border: 1.5em solid var(--main-dimmed); }
.slide a {color: inherit}
.watermark {color: red; font-size: 400%}
.cover__box { background-color: var(--main-dimmed); padding: 2em;}

/* EM elements get a highlighter-like background */
.slide em {font-style: normal; padding-left: 0.1em; padding-right: 0.1em;
  text-shadow: none; background:  hsl(62,100%,50%)}

/* Lists have less indent than the default. */
.slide li {margin-left: 1em}
.slide ol, .slide ul {padding: 0}
.slide li ul, .slide li ol, .slide li li {margin-top: 0.1em; margin-bottom: 0.2em}

/* Own counter, because FF & Safari don't apply text-shadow to the default. */
.slide ol {counter-reset: ol; list-style: none}
.slide ol > li {counter-increment: ol}
.slide ol > li::before {/*float: left;*/ display: inline-block; width: 2em;
  margin-left: -2em; text-align: right; content: counter(ol) ".\A0"}
.slide ol > li > p:first-child {display: inline}
.slide ol[start="2"] {counter-reset: ol 1}
.slide ol[start="3"] {counter-reset: ol 2}
.slide ol[start="4"] {counter-reset: ol 3}
.slide ol[start="5"] {counter-reset: ol 4}
.slide ol[start="6"] {counter-reset: ol 5}
.slide ol[start="7"] {counter-reset: ol 6}
.slide ol[start] {counter-reset: ol calc(attr(start integer) - 1)}

/* Lists with icons or small images instead of bullets. The first
   child of each LI becomes a list bullet. */
ul.with-icons > li {margin-left: 1.5em; list-style: none}
ul.with-icons > li > *:first-child {display: inline-block;
  white-space-trim: discard-before discard-after; /* experimental property */
  margin: 0 0.5em 0 -1.5em; width: 1em}

/* Slides with an image on the left (.side) or right (.side.right) one third */
.slide.side {padding-left: 12.867em /*= 2 + (w - L - 4) * 30% + 1 */}
.slide.side.right, .slide.side.r {padding-left: 2em;
  padding-right: 15.867em; /*= L + 1 + (w - L - 4) * 30% + 1 */}
.side .side {position: absolute; top: 3em /* top margin + a bit */; left: 2em;
  height: 19em /*= N - 4 */; object-fit: contain;
  width: 9.8667em /*= (w - L - 4) * 30% */}
.side .side.cover {object-fit: cover; top: 0; left: 0; height: 23em /*= N */;
  width: 11.867em /*= (w - L - 4) * 30% + 2 */}
.side.right .side, .side.r .side {
  left: 26.022em /*= w - L - 1 - (w - L - 4) * 30% */}
.side.right .side.cover, .side.r .side.cover {
  width: 14.867em /*= L + 1 + (w - L - 4) * 30% */}

/* Slides with a big, square image on the left or right */
.slide.side.big {padding-left: 24em /*= N + 1 */}
.slide.side.right.big, .slide.side.r.big {padding-left: 2em;
  padding-right: 24em /*= N + 1 */}
.side.big .side {top: 2em; left: 2em;
  height: 19em /*= N - 4 */; width: 21em /*= N - 2 */}
.side.big.right .side, .side.big.r .side {left: 17.889em /*= w - N */}
.side.big .side.cover {object-fit: cover; top: 0; left: 0;
  height: 23em /*= N */; width: 23em /*= N */}
.side.big.right .side.cover, .side.big.r .side.cover {
  left: 17.889em /*= w - N */}

  /* Cover pages */
.slide.cover {padding: 6em 2em 2em 2em;
  background: right 12em top 0 / 12em url(svg/logo.svg) no-repeat hsl(0,0%,98%)}
.darkmode .slide.cover, 
.has-darkmode .slide.cover { background-image: url(svg/logo-white-text.svg); }
.slide.cover h1 {}
.slide.cover address { font-size: 1em; }
.slide.cover p {line-height: 1.2; /*color: #6b6b6b*/}
.slide.cover p::first-line {/*font-size: 2em*/}

 /* Chapter pages */
.slide.chapter {padding: 2em 2em 2em 2em;
  background-color: var(--main); color: white; border: 0; display: inline-flex; align-items: center; justify-content: center; flex-direction: column; }
.slide.chapter * { color: white; }
.darkmode .slide.cover, 
.has-darkmode .slide.cover { background-image: none; }
.slide.chapter h2 { font-size: 120%; font-weight: normal; font-style: italic; }

/* Last page */
.slide.final {padding: 6em 2em 2em 2em;
  background: right 12em top 0 / 12em url(svg/logo.svg) no-repeat hsl(0, 0%, 98%)}

/* Notes in a smaller font */
.slide .note {font-size: 70%}
/* ... */

